# inf

./: .gitignore  README.md  inf  inf.c  meson.build  setup.py
src/: file_info.c  file_info.h  handlers.h  main.c  utils.c  utils.h  version.h.in
src/handlers/: archive_handler.c  image_handler.c  pdf_handler.c  text_handler.c  video_handler.c
